# telegram-bot

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
telegram_bot/: app.py  books.py  books.txt  config.py  db.sql  message_texts.py  users.py  voting.py
