[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Yuliya Dzhumanazarova <yaschick451@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
