[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Yuliya Dzhumanazarova <yaschick451@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.5"
telegram = "^0.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
